# Physical-AI-Humanoid-Roboticbook-Hackatho-1

./: .gitignore  README.md
.specify/memory/: constitution.md
backend/: README.md  main.py  pyproject.toml
docs/modules/isaac-ai/: best-practices.md  chapter-1-isaac-overview.md  chapter-2-perception-vslam.md  chapter-3-navigation-humanoid.md  index.md  quick-reference.md  troubleshooting.md
frontend_book/: .env  docusaurus.config.js  package-lock.json  sidebars.js
history/prompts/001-vla-integration/: 1-vla-integration-spec.spec.prompt.md  2-vla-integration-plan.plan.prompt.md  3-vla-integration-tasks.tasks.prompt.md  4-vla-integration-implementation.green.prompt.md
history/prompts/1-digital-twin-simulation/: 1-digital-twin-simulation.spec.prompt.md  2-digital-twin-simulation.plan.prompt.md  3-digital-twin-simulation.tasks.prompt.md  4-digital-twin-simulation.implementation.prompt.md
history/prompts/1-embedding-pipeline/: 1-embedding-pipeline-setup-spec.spec.prompt.md  2-embedding-pipeline-plan.plan.prompt.md  3-embedding-pipeline-tasks.tasks.prompt.md  (+1 more)
specs/001-vla-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-digital-twin-simulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-embedding-pipeline/: spec.md  tasks.md
specs/1-embedding-pipeline/impl/: data-model.md  (+3 more)
specs/1-ros2-robotic-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-ai-robot-brain-isaac/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+31 files in other folders)
