[project]
name = "embedding-pipeline"
version = "0.1.0"
description = "Embedding pipeline for RAG-based retrieval"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "cohere>=4.9.0",
    "qdrant-client>=1.7.0",
    "python-dotenv>=1.0.0",
]